@@ -151,11 +151,12 @@ data Local = Local
     ,localTraces :: [Trace] -- ^ Traces, built in reverse
     ,localTrackAllows :: [Key -> Bool] -- ^ Things that are allowed to be used
     ,localTrackUsed :: [Key] -- ^ Things that have been used
+    ,localProduces :: [FilePath] -- ^ Things this rule produces
     ,localUntrackedDeps :: !Bool -- ^ Taint flag that says this code has untracked dependencies
     }
 
 newLocal :: Stack -> Verbosity -> Local
-newLocal stack verb = Local stack verb Nothing [] 0 [] [] [] False
+newLocal stack verb = Local stack verb Nothing [] 0 [] [] [] [] False
 
 -- Clear all the local mutable variables
 localClearMutable :: Local -> Local
@@ -176,5 +177,6 @@ localMergeMutable root xs = Local
     ,localTraces = concatMap localTraces xs ++ localTraces root
     ,localTrackAllows = localTrackAllows root ++ concatMap localTrackAllows xs
     ,localTrackUsed = localTrackUsed root ++ concatMap localTrackUsed xs
+    ,localProduces = concatMap localProduces xs ++ localProduces root
     ,localUntrackedDeps = any localUntrackedDeps $ root:xs
     }
